Update BasicDirectMessageService.java